cmake_minimum_required(VERSION 3.17)
project(CCC)

set(CMAKE_CXX_STANDARD 17)

add_executable(CCC main.cpp)
add_executable(01s3 01/01s3.cpp)
add_executable(13s4 13/13s4.cpp)
add_executable(20s1 20/20s1.cpp)
add_executable(20s2 20/20s2.cpp)
add_executable(19s2 19/19s2.cpp)
add_executable(07s3 07/07s3.cpp)